--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   "dependencies": {
     "@heroicons/react": "^2.0.18",
     "@react-email/render": "^1.0.2",
-    "autoprefixer": "10.4.15",
+    "autoprefixer": "^10.4.20",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.15",
     "framer-motion": "^10.16.1",
     "next": "^14.2.15",
-    "postcss": "^8.4.47",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-animated-numbers": "^0.16.0",
     "react-dom": "^18.3.1",
     "react-type-animation": "^3.1.0",
     "resend": "^4.0.1-alpha.0",
-    "tailwindcss": "3.3.3"
+    "tailwindcss": "^3.4.14"
   }
 }
